[scala] - initial commit

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
     <modules>
         <module>java</module>
+        <module>scala</module>
         <module>spark</module>
         <module>akka</module>
     </modules>
