--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -17,12 +17,14 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.version>2.11.8</scala.version>
-        <scala.test.version>2.2.6</scala.test.version>
+        <scala.version>2.10.5</scala.version>
+        <scala.test.version>2.0</scala.test.version>
         <scala.tools.version>2.15.2</scala.tools.version>
-        <scala.compat.version>2.11</scala.compat.version>
+        <scala.compat.version>2.10</scala.compat.version>
         <scala.test.plugin.version>1.0</scala.test.plugin.version>
-        <spark.version>1.6.1</spark.version>
+        <spark.version>1.6.0</spark.version>
+        <mysql.version>5.1.6</mysql.version>
+        <elasticsearch.version>2.4.0</elasticsearch.version>
         <!--<hadoop.version>2.7.1</hadoop.version>-->
         <!--<spark.kafka.version>1.3.0</spark.kafka.version>-->
         <!--<spark.kafka.test.version>0.2</spark.kafka.test.version>-->
@@ -33,9 +35,16 @@
         <!--&lt;!&ndash;<scopt.version>3.3.0</scopt.version>&ndash;&gt;-->
     </properties>
 
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id></id>-->
+            <!--<url></url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
+
     <profiles>
         <profile>
-            <id>prod</id>
+            <id>local</id>
             <build>
                 <plugins>
                     <plugin>
@@ -92,6 +101,7 @@
                     <groupId>org.apache.spark</groupId>
                     <artifactId>spark-streaming_${scala.compat.version}</artifactId>
                     <version>${spark.version}</version>
+                    <!--<scope>provided</scope>-->
                 </dependency>
 
                 <!--<dependency>-->
@@ -105,6 +115,20 @@
                     <version>${spark.version}</version>
                     <!--<scope>provided</scope>-->
                 </dependency>
+
+                <dependency> <!-- Spark dependency -->
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-hive_${scala.compat.version}</artifactId>
+                    <version>${spark.version}</version>
+                    <!--<scope>provided</scope>-->
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-streaming-kafka_${scala.compat.version}</artifactId>
+                    <version>1.3.0</version>
+                </dependency>
+
                 <!--<dependency>-->
                     <!--<groupId>org.elasticsearch</groupId>-->
                     <!--<artifactId>elasticsearch-spark_${scala.compat.version}</artifactId>-->
@@ -125,6 +149,140 @@
                     <!--<artifactId>akka-remote_2.10</artifactId>-->
                     <!--<version>2.3.11</version>-->
                 <!--</dependency>-->
+
+                <dependency>
+                    <groupId>mysql</groupId>
+                    <artifactId>mysql-connector-java</artifactId>
+                    <version>${mysql.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.elasticsearch</groupId>
+                    <artifactId>elasticsearch-spark_${scala.compat.version}</artifactId>
+                    <version>${elasticsearch.version}</version>
+                </dependency>
+
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>cloud</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.scala-tools</groupId>
+                        <artifactId>maven-scala-plugin</artifactId>
+                        <version>${scala.tools.version}</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>compile</goal>
+                                    <!--<goal>testCompile</goal>-->
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-shade-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>shade</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <finalName>${artifactId}-${version}</finalName>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+            <dependencies>
+
+                <dependency>
+                    <groupId>org.scala-lang</groupId>
+                    <artifactId>scala-library</artifactId>
+                    <version>${scala.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-core_${scala.compat.version}</artifactId>
+                    <version>${spark.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+                <!--<dependency>-->
+                <!--<groupId>org.apache.hadoop</groupId>-->
+                <!--<artifactId>hadoop-client</artifactId>-->
+                <!--<version>${hadoop.version}</version>-->
+                <!--<scope>provided</scope>-->
+                <!--</dependency>-->
+                <dependency>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-streaming_${scala.compat.version}</artifactId>
+                    <version>${spark.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <!--<dependency>-->
+                <!--<groupId>org.apache.spark</groupId>-->
+                <!--<artifactId>spark-streaming-kafka_${scala.compat.version}</artifactId>-->
+                <!--<version>${spark.kafka.version}</version>-->
+                <!--</dependency>-->
+                <dependency>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-sql_${scala.compat.version}</artifactId>
+                    <version>${spark.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <dependency> <!-- Spark dependency -->
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-hive_${scala.compat.version}</artifactId>
+                    <version>${spark.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-streaming-kafka_2.11</artifactId>
+                    <version>1.6.0</version>
+                </dependency>
+
+                <!--<dependency>-->
+                <!--<groupId>org.elasticsearch</groupId>-->
+                <!--<artifactId>elasticsearch-spark_${scala.compat.version}</artifactId>-->
+                <!--<version>${elasticsearch.spark.version}</version>-->
+                <!--</dependency>-->
+                <!--<dependency>-->
+                <!--<groupId>com.google.code.gson</groupId>-->
+                <!--<artifactId>gson</artifactId>-->
+                <!--<version>2.5</version>-->
+                <!--</dependency>-->
+                <!--<dependency>-->
+                <!--<groupId>com.typesafe.akka</groupId>-->
+                <!--<artifactId>akka-actor_2.10</artifactId>-->
+                <!--<version>2.3.11</version>-->
+                <!--</dependency>-->
+                <!--<dependency>-->
+                <!--<groupId>com.typesafe.akka</groupId>-->
+                <!--<artifactId>akka-remote_2.10</artifactId>-->
+                <!--<version>2.3.11</version>-->
+                <!--</dependency>-->
+
+                <dependency>
+                    <groupId>mysql</groupId>
+                    <artifactId>mysql-connector-java</artifactId>
+                    <version>${mysql.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.elasticsearch</groupId>
+                    <artifactId>elasticsearch-spark_${scala.compat.version}</artifactId>
+                    <version>${elasticsearch.version}</version>
+                </dependency>
 
             </dependencies>
         </profile>
