--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>scala</module>
         <module>spark</module>
         <module>akka</module>
+        <module>R</module>
     </modules>
 
 
