--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -21,7 +21,8 @@
         <scala.tools.version>2.15.2</scala.tools.version>
         <scala.compat.version>2.10</scala.compat.version>
         <scala.test.plugin.version>1.0</scala.test.plugin.version>
-        <spark.version>2.0.0</spark.version>
+        <spark.version>1.6.2</spark.version>
+        <spark20.version>2.0.0</spark20.version>
         <mysql.version>5.1.6</mysql.version>
         <elasticsearch.version>2.4.0</elasticsearch.version>
         <!--<hadoop.version>2.7.1</hadoop.version>-->
@@ -42,6 +43,107 @@
     <!--</repositories>-->
 
     <profiles>
+        <!--<profile>-->
+            <!--<id>local20</id>-->
+            <!--<build>-->
+                <!--<plugins>-->
+                    <!--<plugin>-->
+                        <!--<groupId>org.scala-tools</groupId>-->
+                        <!--<artifactId>maven-scala-plugin</artifactId>-->
+                        <!--<version>${scala.tools.version}</version>-->
+                        <!--<executions>-->
+                            <!--<execution>-->
+                                <!--<goals>-->
+                                    <!--<goal>compile</goal>-->
+                                    <!--&lt;!&ndash;<goal>testCompile</goal>&ndash;&gt;-->
+                                <!--</goals>-->
+                            <!--</execution>-->
+                        <!--</executions>-->
+                    <!--</plugin>-->
+                    <!--<plugin>-->
+                        <!--<groupId>org.apache.maven.plugins</groupId>-->
+                        <!--<artifactId>maven-shade-plugin</artifactId>-->
+                        <!--<executions>-->
+                            <!--<execution>-->
+                                <!--<phase>package</phase>-->
+                                <!--<goals>-->
+                                    <!--<goal>shade</goal>-->
+                                <!--</goals>-->
+                            <!--</execution>-->
+                        <!--</executions>-->
+                        <!--<configuration>-->
+                            <!--<finalName>${artifactId}-${version}</finalName>-->
+                        <!--</configuration>-->
+                    <!--</plugin>-->
+                <!--</plugins>-->
+            <!--</build>-->
+            <!--<dependencies>-->
+
+                <!--<dependency>-->
+                    <!--<groupId>org.scala-lang</groupId>-->
+                    <!--<artifactId>scala-library</artifactId>-->
+                    <!--<version>${scala.version}</version>-->
+                <!--</dependency>-->
+
+                <!--<dependency>-->
+                    <!--<groupId>org.apache.spark</groupId>-->
+                    <!--<artifactId>spark-core_${scala.compat.version}</artifactId>-->
+                    <!--<version>${spark20.version}</version>-->
+                    <!--&lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
+                <!--</dependency>-->
+                <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+                <!--&lt;!&ndash;<groupId>org.apache.hadoop</groupId>&ndash;&gt;-->
+                <!--&lt;!&ndash;<artifactId>hadoop-client</artifactId>&ndash;&gt;-->
+                <!--&lt;!&ndash;<version>${hadoop.version}</version>&ndash;&gt;-->
+                <!--&lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
+                <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
+                <!--<dependency>-->
+                    <!--<groupId>org.apache.spark</groupId>-->
+                    <!--<artifactId>spark-streaming_${scala.compat.version}</artifactId>-->
+                    <!--<version>${spark20.version}</version>-->
+                    <!--&lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
+                <!--</dependency>-->
+
+                <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<groupId>org.apache.spark</groupId>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<artifactId>spark-streaming-kafka_${scala.compat.version}</artifactId>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<version>${spark.kafka.version}</version>&ndash;&gt;-->
+                <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
+                <!--<dependency>-->
+                    <!--<groupId>org.apache.spark</groupId>-->
+                    <!--<artifactId>spark-sql_${scala.compat.version}</artifactId>-->
+                    <!--<version>${spark20.version}</version>-->
+                    <!--&lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
+                <!--</dependency>-->
+
+                <!--<dependency> &lt;!&ndash; Spark dependency &ndash;&gt;-->
+                    <!--<groupId>org.apache.spark</groupId>-->
+                    <!--<artifactId>spark-hive_${scala.compat.version}</artifactId>-->
+                    <!--<version>${spark20.version}</version>-->
+                    <!--&lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
+                <!--</dependency>-->
+
+                <!--<dependency>-->
+                    <!--<groupId>org.apache.spark</groupId>-->
+                    <!--<artifactId>spark-streaming-kafka_${scala.compat.version}</artifactId>-->
+                    <!--<version>1.3.0</version>-->
+                <!--</dependency>-->
+
+                <!--<dependency>-->
+                    <!--<groupId>mysql</groupId>-->
+                    <!--<artifactId>mysql-connector-java</artifactId>-->
+                    <!--<version>${mysql.version}</version>-->
+                <!--</dependency>-->
+
+                <!--<dependency>-->
+                    <!--<groupId>org.elasticsearch</groupId>-->
+                    <!--<artifactId>elasticsearch-spark_${scala.compat.version}</artifactId>-->
+                    <!--<version>${elasticsearch.version}</version>-->
+                <!--</dependency>-->
+
+            <!--</dependencies>-->
+        <!--</profile>-->
+
         <profile>
             <id>local</id>
             <build>
@@ -104,9 +206,9 @@
                 </dependency>
 
                 <!--<dependency>-->
-                    <!--<groupId>org.apache.spark</groupId>-->
-                    <!--<artifactId>spark-streaming-kafka_${scala.compat.version}</artifactId>-->
-                    <!--<version>${spark.kafka.version}</version>-->
+                <!--<groupId>org.apache.spark</groupId>-->
+                <!--<artifactId>spark-streaming-kafka_${scala.compat.version}</artifactId>-->
+                <!--<version>${spark.kafka.version}</version>-->
                 <!--</dependency>-->
                 <dependency>
                     <groupId>org.apache.spark</groupId>
@@ -115,12 +217,26 @@
                     <!--<scope>provided</scope>-->
                 </dependency>
 
-                <dependency> <!-- Spark dependency -->
+                <!--<dependency>-->
+                    <!--<groupId>org.apache.spark</groupId>-->
+                    <!--<artifactId>spark-hive_${scala.compat.version}</artifactId>-->
+                    <!--<version>${spark.version}</version>-->
+                    <!--&lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
+                <!--</dependency>-->
+
+                <dependency>
                     <groupId>org.apache.spark</groupId>
-                    <artifactId>spark-hive_${scala.compat.version}</artifactId>
+                    <artifactId>spark-mllib_${scala.compat.version}</artifactId>
                     <version>${spark.version}</version>
                     <!--<scope>provided</scope>-->
                 </dependency>
+
+                <dependency> <!-- Spark dependency -->
+                    <groupId>com.databricks</groupId>
+                    <artifactId>spark-csv_${scala.compat.version}</artifactId>
+                    <version>1.5.0</version>
+                </dependency>
+
 
                 <dependency>
                     <groupId>org.apache.spark</groupId>
@@ -129,24 +245,24 @@
                 </dependency>
 
                 <!--<dependency>-->
-                    <!--<groupId>org.elasticsearch</groupId>-->
-                    <!--<artifactId>elasticsearch-spark_${scala.compat.version}</artifactId>-->
-                    <!--<version>${elasticsearch.spark.version}</version>-->
+                <!--<groupId>org.elasticsearch</groupId>-->
+                <!--<artifactId>elasticsearch-spark_${scala.compat.version}</artifactId>-->
+                <!--<version>${elasticsearch.spark.version}</version>-->
                 <!--</dependency>-->
                 <!--<dependency>-->
-                    <!--<groupId>com.google.code.gson</groupId>-->
-                    <!--<artifactId>gson</artifactId>-->
-                    <!--<version>2.5</version>-->
+                <!--<groupId>com.google.code.gson</groupId>-->
+                <!--<artifactId>gson</artifactId>-->
+                <!--<version>2.5</version>-->
                 <!--</dependency>-->
                 <!--<dependency>-->
-                    <!--<groupId>com.typesafe.akka</groupId>-->
-                    <!--<artifactId>akka-actor_2.10</artifactId>-->
-                    <!--<version>2.3.11</version>-->
+                <!--<groupId>com.typesafe.akka</groupId>-->
+                <!--<artifactId>akka-actor_2.10</artifactId>-->
+                <!--<version>2.3.11</version>-->
                 <!--</dependency>-->
                 <!--<dependency>-->
-                    <!--<groupId>com.typesafe.akka</groupId>-->
-                    <!--<artifactId>akka-remote_2.10</artifactId>-->
-                    <!--<version>2.3.11</version>-->
+                <!--<groupId>com.typesafe.akka</groupId>-->
+                <!--<artifactId>akka-remote_2.10</artifactId>-->
+                <!--<version>2.3.11</version>-->
                 <!--</dependency>-->
 
                 <dependency>
@@ -163,6 +279,7 @@
 
             </dependencies>
         </profile>
+
 
         <profile>
             <id>cloud</id>
