--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -231,7 +231,7 @@
                     <!--<scope>provided</scope>-->
                 </dependency>
 
-                <dependency> <!-- Spark dependency -->
+                <dependency>
                     <groupId>com.databricks</groupId>
                     <artifactId>spark-csv_${scala.compat.version}</artifactId>
                     <version>1.5.0</version>
@@ -365,6 +365,12 @@
                     <groupId>org.apache.spark</groupId>
                     <artifactId>spark-streaming-kafka_2.11</artifactId>
                     <version>1.6.0</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>com.databricks</groupId>
+                    <artifactId>spark-csv_${scala.compat.version}</artifactId>
+                    <version>1.5.0</version>
                 </dependency>
 
                 <!--<dependency>-->
